--- a/style.css
+++ b/style.css
@@ -1,18 +1,103 @@
 * {
     padding: 0;
     margin: 0;
+    /*outline: #00FF00 solid 1px;*/
 }
 @font-face {
     font-family: "Starship";
     src: url('fonts/StarshipRegular.ttf') format('truetype');
 }
 body {
+    height: 100svh;
     background-color: #915F44;
     color: white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: grid;
+    grid-template-columns: 1fr 2.5fr;
+    grid-template-rows: 1fr 6fr .5fr;
 }
+.header {
+    grid-column: 1/3;
+    grid-row: 1/2;
+}
+
+.sidebar {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    background-color: #5A6778;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.sidebar > * {
+    max-width: 22rem;
+}
+.sidebar > div {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+input {
+    height: 2rem;
+}
+button {
+    height: 3rem;
+    width: 10rem;
+}
+.main-content {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    background-color: #B89343;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    padding: 1rem;
+    gap: 1rem;
+}
+.card {
+    box-sizing: border-box;
+    background-color: white;
+    color: #9B3D23;
+    padding: 1.5rem;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    border-radius: .5rem;
+    box-shadow: 3px 3px 1px #dfdfdf;
+    gap: .5rem;
+}
+.footer {
+    grid-column: 1/3;
+    grid-row: 3/4;
+}
+
 h1 {
     font-family: 'Starship', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 7rem;
     text-align: center;
+}
+h2 {
+    font-family: 'Starship', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 3rem;
+    text-align: center;
+}
+h4 {
+    font-family: 'Starship', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 2rem;
+
+}
+.author {
+    font-style: italic;
+}
+.icons {
+    height: 1.5rem;
+    vertical-align: middle;
+}
+.flex {
+    display: flex;
+    justify-content: space-between;
+}
+.column {
+    flex-direction: column;
+    gap: .5rem;
 }
