--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ button {
     grid-row: 2/3;
     background-color: #B89343;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     padding: 1rem;
     gap: 1rem;
 }
@@ -60,6 +60,7 @@ button {
     color: #9B3D23;
     padding: 1.5rem;
     height: 250px;
+    max-width: 500px;
     display: flex;
     flex-direction: column;
     border-radius: .5rem;
